Fix hotspot label on mobile devices

--- a/src/styles/Map.module.css
+++ b/src/styles/Map.module.css
@@ -206,7 +206,7 @@
 	}
 }
 
-@media (hover: none) {
+@media (hover: none), (pointer: coarse) {
 	.hotspotLabel {
 		opacity: 1;
 		font-size: 9px;
